--- a/k8s/e-commerce/Chart.yaml
+++ b/k8s/e-commerce/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 name: e-commerce
-description: A Helm chart for Kubernetes E-Commerce
+description: A Helm chart for E-Commerce-App
 type: application
 version: 0.1.0
 appVersion: "1.16.0"
