--- a/k8s/e-commerce/values.yaml
+++ b/k8s/e-commerce/values.yaml
@@ -11,8 +11,15 @@ backend:
   name: backend
   image: "kapilbhalodiya/e-commerce-app-backend:0.0.1.RELEASE"
   replicas: 1
-  port: 8080
-  serviceport: 8080
+  port: 8000
+  serviceport: 8000
 
 service:
-  port: 80  
+  port: 80
+
+ingress:
+  enabled: true
+  host: mye-comapp.com
+  paths:
+    frontend: "/"
+    backend: "/api"
