Set-up Ingress for Project with Nginx

--- a/k8s/e-commerce/templates/be-service.yaml
+++ b/k8s/e-commerce/templates/be-service.yaml
@@ -10,4 +10,4 @@ spec:
     - port: {{ .Values.backend.serviceport }}
       protocol: TCP
       targetPort: {{ .Values.backend.port }}
-  type: NodePort
+  type: ClusterIP
