--- a/k8s/e-commerce/templates/fe-service.yaml
+++ b/k8s/e-commerce/templates/fe-service.yaml
@@ -10,4 +10,4 @@ spec:
     - port: {{ .Values.frontend.serviceport }}
       protocol: TCP
       targetPort: {{ .Values.frontend.port }}
-  type: NodePort
+  type: ClusterIP
