--- a/k8s/e-commerce/templates/ingress.yaml
+++ b/k8s/e-commerce/templates/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Set this to "true" if you want SSL support
+    kubernetes.io/ingress.class: {{ .Values.ingress.ingressClass}}
 spec:
   rules:
   - host: {{ .Values.ingress.host }} 
