Make an Update with Pagination and some Configuration

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -11,6 +11,13 @@
 npm-debug.log
 yarn-error.log
 
+
+# .gitignore
+# .gitignore
+src/environments/environment.ts
+src/environments/environment.prod.ts
+
+
 # IDEs and editors
 .idea/
 .project
