--- a/infra/argocd/apps/base/monitoring-rules.yaml
+++ b/infra/argocd/apps/base/monitoring-rules.yaml
@@ -8,9 +8,9 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/your-org/SharKApp.git
+    repoURL: https://github.com/Kapil-Bhalodiya/E-commerce-Platform.git
     targetRevision: HEAD
-    path: devops/charts/monitoring
+    path: infra/charts/monitoring
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
