--- a/infra/argocd/apps/base/app-ingress.yaml
+++ b/infra/argocd/apps/base/app-ingress.yaml
@@ -14,7 +14,7 @@ spec:
         - ../../config/environments/prod/values-ingress.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace: default
+    namespace: ingress-nginx
   syncPolicy:
     automated:
       prune: true
