Update Source flile for correct destination

--- a/infra/argocd/apps/base/app-ingress.yaml
+++ b/infra/argocd/apps/base/app-ingress.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/Kapil-Bhalodiya/E-commerce-Platform.git
     targetRevision: main
-    path: charts/ingress
+    path: infra/charts/ingress
     helm:
       valueFiles:
         - ../../config/environments/prod/values-ingress.yaml
