Update the Path for source in Argo Spec

--- a/infra/argocd/apps/base/app-ingress.yaml
+++ b/infra/argocd/apps/base/app-ingress.yaml
@@ -8,10 +8,10 @@ spec:
   source:
     repoURL: https://github.com/Kapil-Bhalodiya/E-commerce-Platform.git
     targetRevision: main
-    path: charts/ingress
+    path: infra/charts/ingress
     helm:
       valueFiles:
-        - ../../config/environments/prod/values-ingress.yaml
+        - ../../../config/environments/prod/values-ingress.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: dev
