--- a/infra/argocd/apps/base/app-ingress.yaml
+++ b/infra/argocd/apps/base/app-ingress.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/Kapil-Bhalodiya/E-commerce-Platform.git
-    targetRevision: HEAD
+    targetRevision: main
     path: infra/charts/ingress
     helm:
       valueFiles:
