Update the Path for source in Argo Spec

--- a/infra/argocd/apps/base/app-ingress.yaml
+++ b/infra/argocd/apps/base/app-ingress.yaml
@@ -11,7 +11,7 @@ spec:
     path: infra/charts/ingress
     helm:
       valueFiles:
-        - ../../../config/environments/prod/values-ingress.yaml
+        - ../../config/environments/prod/values-ingress.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: dev
