Update Directory Structure and add main application.yaml

--- a/infra/addon/cert-manager/Chart.yaml
+++ b/infra/addon/cert-manager/Chart.yaml
@@ -1,10 +1,11 @@
 apiVersion: v2
+appVersion: "1.0"
 name: cert-manager
 description: Cert-Manager for managing TLS certificates
-type: application
-version: 0.1.0
-appVersion: "v1.15.3"  # Use the latest stable version
+version: 0.0.1
 dependencies:
   - name: cert-manager
     version: "v1.15.3"
     repository: "https://charts.jetstack.io"
+    alias: cert-manager
+    condition: cert-manager.enabled
