--- a/infra/config/dev/application.yaml
+++ b/infra/config/dev/application.yaml
@@ -52,6 +52,7 @@ spec:
         namespace: '{{target.path.basename}}'
       syncPolicy:
         automated:
-          prune: false
+          prune: true
+          selfHeal: true
         syncOptions:
           - CreateNamespace=true
