--- a/infra/addons/cert-manager/templates/clusterissuer-prod.yaml
+++ b/infra/addons/cert-manager/templates/clusterissuer-prod.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email: {{ .Values.issuer.email | quote }}
+    email: kapilbhalodiya.dcs22@vnsgu.ac.in
     privateKeySecretRef:
       name: letsencrypt-prod
     solvers:
