--- a/infra/config/application.yaml
+++ b/infra/config/application.yaml
@@ -1,46 +1,50 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: ecommerce-applications
+  name: ecommerce-app
   namespace: argocd
 spec:
   generators:
     - matrix:
-       generators:
-         - git:
-            pathParamPrefix: target
-            repoURL: https://github.com/Kapil-Bhalodiya/E-commerce-Platform.git
-            revision: main
-            files:
-              - path: config/**/values.yaml
-         - git:
-            pathParamPrefix: app
-            repoURL: https://github.com/Kapil-Bhalodiya/E-commerce-Platform.git
-            revision: main
-            files:
-              - path: config/{{target.path.basename}}/**/values.yaml
+        generators:
+          - git:
+              pathParamPrefix: target
+              repoURL: https://github.com/Kapil-Bhalodiya/E-commerce-Platform.git
+              revision: main
+              directories:
+                - path: infra/config/*/app
+          - git:
+              pathParamPrefix: app
+              repoURL: https://github.com/Kapil-Bhalodiya/E-commerce-Platform.git
+              revision: main
+              files:
+                - path: infra/config/{{target.path.dirname}}/app/**/values.yaml
+              # valueFilesFilters:
+              #   - exclude:
+              #       - nginx-ingress/values.yaml
   template:
     metadata:
-      name: '{{app.path.basename}}-{{target.namespace}}'
+      name: '{{app.path.basename}}-{{target.path.dirname}}'
     spec:
-      project: '{{target.project}}'
+      project: default
       source:
         repoURL: https://github.com/Kapil-Bhalodiya/E-commerce-Platform.git
         targetRevision: main
-        path: 'addons/{{app.path.basename}}'
+        path: 'infra/addons/{{app.path.basename}}'
         helm:
           valueFiles:
             - values.yaml
-            - '../../config/{{target.path.basename}}/values.yaml'
-            - '../../config/{{target.path.basename}}/{{app.path.basename}}/values.yaml'
+            - '../../config/{{target.path.dirname}}/app/{{app.path.basename}}/values.yaml'
           values: |-
             app:
-              environment: {{target.path.basename}}
+              environment: {{target.path.dirname}}
               nameOverride: {{app.path.basename}}
       destination:
-        server: '{{target.address}}'
-        namespace: '{{target.namespace}}'
+        server: https://kubernetes.default.svc
+        namespace: '{{target.path.dirname}}'
       syncPolicy:
         automated:
           prune: true
           selfHeal: true
+        syncOptions:
+          - CreateNamespace=true
