--- a/infra/addons/backend/values.yaml
+++ b/infra/addons/backend/values.yaml
@@ -1,5 +1,3 @@
-replicaCount: 1
-namespace: dev
 image:
   repository: kapilbhalodiya/ecom-backend
   tag: "latest"
@@ -9,18 +7,18 @@ service:
   type: ClusterIP
   port: 8000
 
-metrics:
-  enabled: true
-  path: /metrics
-  port: 3000
+# metrics:
+#   enabled: true
+#   path: /metrics
+#   port: 3000
 
-tracing:
-  enabled: true
-  jaegerAgentHost: jaeger-agent
-  jaegerAgentPort: 6831
+# tracing:
+#   enabled: true
+#   jaegerAgentHost: jaeger-agent
+#   jaegerAgentPort: 6831
 
-slo:
-  enabled: false
-  objectives:
-    availability: 99.9
-    latency: 0.5
+# slo:
+#   enabled: false
+#   objectives:
+#     availability: 99.9
+#     latency: 0.5
