--- a/infra/config/application.yaml
+++ b/infra/config/application.yaml
@@ -1,30 +1,28 @@
+# TODO add sync ignore on deployment replicas when HPA enabled (if not done by Argo by default)
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: ecommerce-app
+  name: ecommerce-app-v2
   namespace: argocd
 spec:
   generators:
     - matrix:
-        generators:
-          - git:
-              pathParamPrefix: target
-              repoURL: https://github.com/Kapil-Bhalodiya/E-commerce-Platform.git
-              revision: main
-              directories:
-                - path: infra/config/*/app
-          - git:
-              pathParamPrefix: app
-              repoURL: https://github.com/Kapil-Bhalodiya/E-commerce-Platform.git
-              revision: main
-              files:
-                - path: infra/config/{{target.path.dirname}}/app/**/values.yaml
-              # valueFilesFilters:
-              #   - exclude:
-              #       - nginx-ingress/values.yaml
+       generators:
+         - git:
+            pathParamPrefix: target
+            repoURL: https://github.com/Kapil-Bhalodiya/E-commerce-Platform.git
+            revision: main
+            files:
+              - path: infra/config/**/values.yaml
+         - git:
+            pathParamPrefix: app
+            repoURL: https://github.com/Kapil-Bhalodiya/E-commerce-Platform.git
+            revision: main
+            files:
+              - path: infra/config/{{target.path.basename}}/**/values.yaml
   template:
     metadata:
-      name: '{{app.path.basename}}-{{target.path.dirname}}'
+      name: '{{app.path.basename}}-{{target.path.basename}}'
     spec:
       project: default
       source:
@@ -34,14 +32,15 @@ spec:
         helm:
           valueFiles:
             - values.yaml
-            - '../../config/{{target.path.dirname}}/app/{{app.path.basename}}/values.yaml'
+            - '../../config/{{target.path.basename}}/values.yaml'
+            - '../../config/{{target.path.basename}}/{{app.path.basename}}/values.yaml'
           values: |-
             app:
-              environment: {{target.path.dirname}}
+              environment: {{target.path.basename}}
               nameOverride: {{app.path.basename}}
       destination:
         server: https://kubernetes.default.svc
-        namespace: '{{target.path.dirname}}'
+        namespace: '{{target.path.basename}}'
       syncPolicy:
         automated:
           prune: true
