Add MongoDB secret and access backend via mongoDB pod

--- a/infra/addons/backend/values.yaml
+++ b/infra/addons/backend/values.yaml
@@ -3,6 +3,9 @@ image:
   tag: "latest"
   pullPolicy: IfNotPresent
 
+env:
+  MONGODB_URI: ""  # We'll set this dynamically in the deployment
+
 service:
   type: ClusterIP
   port: 8000
