--- a/infra/addons/mongodb/templates/secret.yaml
+++ b/infra/addons/mongodb/templates/secret.yaml
@@ -6,4 +6,4 @@ metadata:
 type: Opaque
 data:
   mongodb-root-username: {{ .Values.mongodb.username | b64enc }}
-  mongodb-root-password: {{ "password" | b64enc }}  # Change this in production
+  mongodb-root-password: {{ "UspGS7dAe8lxbEVQ" | b64enc }}  # Change this in production
