--- a/infra/addons/backend/templates/deployment.yaml
+++ b/infra/addons/backend/templates/deployment.yaml
@@ -24,12 +24,17 @@ spec:
               containerPort: {{ .Values.service.port }}
               protocol: TCP
           env:
-            {{- if .Values.tracing.enabled }}
-            - name: JAEGER_AGENT_HOST
-              value: {{ .Values.tracing.jaegerAgentHost }}
-            - name: JAEGER_AGENT_PORT
-              value: {{ .Values.tracing.jaegerAgentPort | quote }}
-            {{- end }}
+          - name: MONGODB_URI
+            valueFrom:
+              secretKeyRef:
+                name: backend-mongodb-secret
+                key: mongodb-uri
+          {{- if .Values.tracing.enabled }}
+          - name: JAEGER_AGENT_HOST
+            value: {{ .Values.tracing.jaegerAgentHost }}
+          - name: JAEGER_AGENT_PORT
+            value: {{ .Values.tracing.jaegerAgentPort | quote }}
+          {{- end }}
           resources:
             requests:
               cpu: "200m"
