Update Secret Value for Mongodb schema name

--- a/infra/addons/backend/templates/secret.yaml
+++ b/infra/addons/backend/templates/secret.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: {{ .Values.namespace }}
 type: Opaque
 stringData:
-  mongodb-uri: "mongodb://kapil001:UspGS7dAe8lxbEVQ@mongodb.dev.svc.cluster.local:27017/e-commerce"
+  mongodb-uri: "mongodb://kapil001:UspGS7dAe8lxbEVQ@mongodb.dev.svc.cluster.local:27017"
