Upadte Backend with MongoDB atlas

--- a/infra/addons/backend/templates/deployment.yaml
+++ b/infra/addons/backend/templates/deployment.yaml
@@ -23,7 +23,7 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
-          # env:
+          # env: //commented for now
           # - name: MONGODB_URI
           #   valueFrom:
           #     secretKeyRef:
