--- a/infra/addons/backend/templates/deployment.yaml
+++ b/infra/addons/backend/templates/deployment.yaml
@@ -29,12 +29,6 @@ spec:
           #     secretKeyRef:
           #       name: backend-mongodb-secret
           #       key: mongodb-uri
-          {{- if .Values.tracing.enabled }}
-          - name: JAEGER_AGENT_HOST
-            value: {{ .Values.tracing.jaegerAgentHost }}
-          - name: JAEGER_AGENT_PORT
-            value: {{ .Values.tracing.jaegerAgentPort | quote }}
-          {{- end }}
           resources:
             requests:
               cpu: "200m"
@@ -42,3 +36,9 @@ spec:
             limits:
               cpu: "1"
               memory: "1Gi"
+        # {{- if .Values.tracing.enabled }}
+        # - name: JAEGER_AGENT_HOST
+        #   value: {{ .Values.tracing.jaegerAgentHost }}
+        # - name: JAEGER_AGENT_PORT
+        #   value: {{ .Values.tracing.jaegerAgentPort | quote }}
+        # {{- end }}
