--- a/infra/addons/loki/Chart.yaml
+++ b/infra/addons/loki/Chart.yaml
@@ -3,6 +3,9 @@ name: loki
 description: A Helm chart to deploy Loki
 version: 0.1.0
 dependencies:
-  - name: loki
-    version: 2.8.9
-    repository: https://grafana.github.io/helm-charts
+    - name: loki
+      version: 6.7.4
+      repository: https://grafana.github.io/helm-charts
+    - name: promtail
+      version: 6.16.4
+      repository: https://grafana.github.io/helm-charts
