--- a/infra/config/application.yaml
+++ b/infra/config/application.yaml
@@ -83,6 +83,7 @@ spec:
             - values.yaml  # infra/addons/<app>/values.yaml
             - '../../config/{{target.path.basename}}/values.yaml'  # infra/config/dev/values.yaml
             - '../../config/{{target.path.basename}}/app/{{app.path.basename}}/values.yaml'  # infra/config/dev/app/backend/values.yaml or infra/config/dev/monitoring/loki/values.yaml
+            - '../../config/{{target.path.basename}}/monitoring/{{app.path.basename}}/values.yaml'
           values: |-
             app:
               environment: {{target.path.basename}}
