--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -1,13 +1,18 @@
 loki:
   enabled: true
   singleBinary:
-    replicas: 1  # Run Loki as a single pod for simplicity in dev
+    replicas: 1
     persistence:
       enabled: true
       size: 10Gi
       storageClassName: standard
+  # Define the storage backend type explicitly
+  storage:
+    type: filesystem
+    # Provide empty bucketNames to avoid nil pointer errors
+    bucketNames: {}
   config:
-    auth_enabled: false  # Disable auth for simplicity
+    auth_enabled: false
     schema_config:
       configs:
       - from: 2020-10-01
