Fixed Loki chart rendering by aligning directory structure and ensuring bucketNames

--- a/infra/config/dev/app/loki/values.yaml
+++ b/infra/config/dev/app/loki/values.yaml
@@ -3,6 +3,11 @@ loki:
     replicas: 1
     persistence:
       size: 5Gi  # Smaller size for dev
+  storage:
+    bucketNames:
+      chunks: ""
+      ruler: ""
+      admin: ""
 promtail:
   config:
-    logLevel: debug
+    logLevel: debug  # More verbose logging for dev
