Updated Loki chart version to 6.11.0 and ensured bucketNames in global values

--- a/infra/config/dev/values.yaml
+++ b/infra/config/dev/values.yaml
@@ -8,3 +8,9 @@ target:
   address: https://kubernetes.default.svc
   namespace: dev
   project: default
+loki:
+  storage:
+    bucketNames:
+      chunks: ""
+      ruler: ""
+      admin: ""
