--- a/infra/addons/loki/Chart.yaml
+++ b/infra/addons/loki/Chart.yaml
@@ -4,7 +4,7 @@ description: A Helm chart to deploy Loki
 version: 0.1.0
 dependencies:
     - name: loki
-      version: 6.7.4
+      version: 6.11.0  # Updated from 6.7.4 to 6.11.0
       repository: https://grafana.github.io/helm-charts
     - name: promtail
       version: 6.16.4
