--- a/infra/config/dev/app/loki/values.yaml
+++ b/infra/config/dev/app/loki/values.yaml
@@ -1,11 +1,11 @@
 loki:
   SimpleScalable:
-    replicas: 0  # Disable SimpleScalable mode
-  singleBinary:
-    replicas: 1  # Enable singleBinary mode
+    replicas: 1
   loki:
     fullnameOverride: loki-dev
     storage:
+      # Define bucketNames with empty values to avoid nil pointer errors in the loki chart
+      # Not used with filesystem storage, but required by the chart's template logic
       bucketNames:
         chunks: ''
         ruler: ''
