--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -7,11 +7,36 @@ loki:
       storageClassName: standard
   test:
     enabled: false  
+  deploymentMode: SimpleScalable
+
+  minio:
+    enabled: false
+  lokiCanary:
+    enabled: false
+  ruler:
+    enabled: false
+  memcachedExporter:
+    # -- Whether memcached metrics should be exported
+    enabled: false
+  chunksCache:
+    enabled: false
+  resultsCache:
+    enabled: false
+    
+  # Zero out replica counts of other deployment modes
+  singleBinary:
+    replicas: 0
+  backend:
+    replicas: 1
+  read:
+    replicas: 1
+  write:
+    replicas: 1
   loki:
     enterprise:
       enabled: false
     canary:
-      enabled: false  # Disable canary pod
+      enabled: false
     memcached:
       chunk_cache:
         enabled: false
