Added an initContainer to fix permissions on /var/loki by setting ownership to user 10001, which is the default user for Grafana Loki.

--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -24,14 +24,14 @@ loki:
     enabled: false
     
   # Zero out replica counts of other deployment modes
-  singleBinary:
-    replicas: 0
-  backend:
-    replicas: 1
-  read:
-    replicas: 1
-  write:
-    replicas: 1
+  # singleBinary:
+  #   replicas: 0
+  # backend:
+  #   replicas: 1
+  # read:
+  #   replicas: 1
+  # write:
+  #   replicas: 1
   loki:
     enterprise:
       enabled: false
