--- a/infra/config/dev/app/loki/values.yaml
+++ b/infra/config/dev/app/loki/values.yaml
@@ -2,16 +2,34 @@ loki:
   SimpleScalable:
     read:
       replicas: 1
+      resources:
+        limits:
+          memory: "1Gi"
+        requests:
+          cpu: "100m"
+          memory: "512Mi"
     write:
       replicas: 1
+      resources:
+        limits:
+          memory: "1Gi"
+        requests:
+          cpu: "100m"
+          memory: "512Mi"
     backend:
       replicas: 1
+      resources:
+        limits:
+          memory: "1Gi"
+        requests:
+          cpu: "100m"
+          memory: "512Mi"
       podTemplate:
         spec:
           initContainers:
             - name: fix-permissions
               image: busybox
-              command: ["sh", "-c", "chown -R 10001:10001 /var/loki"]
+              command: ["sh", "-c", "mkdir -p /var/loki/chunks /var/loki/data/boltdb-index /var/loki/data/boltdb-cache /var/loki/data/tsdb-index /var/loki/data/tsdb-cache && chown -R 10001:10001 /var/loki"]
               volumeMounts:
                 - name: data
                   mountPath: /var/loki
