--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -7,31 +7,6 @@ loki:
       storageClassName: standard
   test:
     enabled: false  
-  deploymentMode: SimpleScalable
-
-  minio:
-    enabled: false
-  lokiCanary:
-    enabled: false
-  ruler:
-    enabled: false
-  memcachedExporter:
-    # -- Whether memcached metrics should be exported
-    enabled: false
-  chunksCache:
-    enabled: false
-  resultsCache:
-    enabled: false
-    
-  # Zero out replica counts of other deployment modes
-  singleBinary:
-    replicas: 0
-  backend:
-    replicas: 1
-  read:
-    replicas: 1
-  write:
-    replicas: 1
   loki:
     enterprise:
       enabled: false
@@ -76,14 +51,16 @@ loki:
               period: 24h
               prefix: index_
       storage_config:
-        filesystem:
-          directory: /var/loki/chunks
         boltdb_shipper:
           active_index_directory: /var/loki/data/boltdb-index
           cache_location: /var/loki/data/boltdb-cache
         tsdb_shipper:
           active_index_directory: /var/loki/data/tsdb-index
           cache_location: /var/loki/data/tsdb-cache
+        filesystem:
+          directory: /var/loki/chunks
+      compactor:
+        enabled: false  # Disable compactor for filesystem backend
 promtail:
   enabled: true
   config:
